[tool.poetry]
name = "pyramidproject"
version = "0.1.0"
description = ""
authors = ["Erfan Arefmehr <erfan.arefmehr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
cookiecutter = "^2.6.0"
pyramid = "^2.0.2"
zodb = "^6.0"
sqlalchemy = "^2.0.36"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
